--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -150,7 +150,7 @@ p.pre-header{
       font-family: $button;
       margin: 0 10px 0 10px;
       color:$white;
-      @media(min-width:768px){
+      @media(min-width:12000px){
         font-size:16px;
         margin: 0 26px 0 20px;
       }
@@ -164,7 +164,7 @@ p.pre-header{
     .btn-arrow{
       background-color: $red-contrast;
       padding: 10px;
-      @media (min-width:768px){
+      @media (min-width:1200px){
         padding: 16px;
       }
     }
@@ -273,7 +273,7 @@ p.pre-header{
   //*************containers*********************
 
 .wrapper{ 
-  max-width: 1420px;
+  max-width: 1440px;
   margin: 0 auto;
 }
 
@@ -284,13 +284,8 @@ p.pre-header{
   overflow: hidden;
 
   @media (min-width:768px){
-    padding-left:40px;
-    padding-right:40px;
-  }
-
-  @media (min-width:1200px){
-    padding-left:80px;
-    padding-right:80px;
+    padding-left:5vw;
+    padding-right:5vw;
   }
 }
 
@@ -398,12 +393,15 @@ nav{
   .right-size{
     padding:0 30px 40px 30px;
   }
+
+  @media (min-width:768px){
+    padding-bottom: 7vw;
+  }
   @media (min-width:992px){
-    padding-bottom: 120px;
     .right-size{
       padding-bottom: 60px;
       padding-right: 50px;
-      padding-left:300px;
+      padding-left:20vw;
     }
   }
 }
@@ -411,8 +409,8 @@ nav{
 //*************style 4 *********************
 // used on home page 2 times for residential and commercial introductions
 .style-4{
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 5vw;
+  padding-bottom: 5vw;
   .intro-text{
     color:$dark-grey;
   }
@@ -420,8 +418,8 @@ nav{
     color:$light-grey;
   }
   @media (min-width:992px){
-    padding-top: 80px;
-    padding-bottom: 80px;
+    // padding-top: 80px;
+    // padding-bottom: 80px;
 
     .divider-detail{
       margin-bottom: 40px;
@@ -474,7 +472,7 @@ nav{
 
   @media (min-width:768px){
     .intro-text{
-      margin-top: 80px;
+      margin-top:5vw;
     }
 
     .right .max-800,
@@ -482,6 +480,9 @@ nav{
       padding:50px  40px;
     }
   }
+
+
+
 
   @media (min-width:992px){
     .half,
@@ -498,8 +499,8 @@ nav{
     .right .max-800,
     .left .max-800{
       margin-right:0;
-      max-width: calc(720px + 80px);
-      padding: 80px;
+      max-width:800px;
+      padding: 5vw 5.7vw;
     }
 
 
@@ -510,9 +511,7 @@ nav{
       }
     }
 
-    .mg-top-lg{
-      margin-top:140px
-    }
+
     .right-text{
       .btn {
         justify-content: flex-end;
@@ -525,9 +524,17 @@ nav{
     
   }
 
+
+
   @media (min-width:992px) and (max-width:1200px){
     h2{
       font-size:60px;
+    }
+  }
+
+  @media (min-width:1200px){
+    .mg-top-lg{
+      margin-top:8em;
     }
   }
 
@@ -572,20 +579,24 @@ nav{
     padding-top:60px;
     padding-bottom:60px;
       .wrapper{
-        max-width: 1420px;
+        max-width: 1440px;
         h2{
           max-width:1200px;
           margin-left: auto;
           margin-right: auto;
         }
       }
-    @media (min-width:992px){
-      padding-top:120px;
-      padding-bottom:120px;
-      h2{
-        text-align:center;
+
+      @media(min-width:768px){
+        padding-top:8vw;
+        padding-bottom:8vw;
       }
-    }
+
+      @media (min-width:992px){
+        h2{
+          text-align:center;
+        }
+      }
   }
 }
 
@@ -708,9 +719,8 @@ nav{
 //homepage, services pages
 .pod-wrapper{
   padding: 20px;
-  padding-bottom: 60px;
-  @media (min-width:992px){
-    padding-bottom: 100px;
+  @media (min-width:768px){
+    padding-bottom: 7vw;
   }
 }
 
@@ -719,7 +729,7 @@ nav{
   margin: 0 auto;
   .pod{
     background-color:#F9FAFB;
-    padding: 40px;
+    padding: 20px;
     width:100%;
     border-bottom: 1px solid $light-grey;
     &:last-of-type{
@@ -738,6 +748,7 @@ nav{
     }
 
     @media (min-width:768px){
+      padding: 4vw ;
       width: 50%; 
       border-right: 1px solid $light-grey;
       &:last-of-type{
@@ -749,7 +760,6 @@ nav{
     }
 
     @media (min-width:992px){
-      padding: 28px;
       width: 25%;
       &:nth-of-type(2n){
         border-right-width:1px;
@@ -759,17 +769,14 @@ nav{
         margin-bottom: 60px;
       }
     }
+
     @media (min-width:1200px){
-      padding: 40px; 
       .pre-header{
         margin-bottom: 100px;
       }
       h4{
         margin-top: 40px;
       }
-    }
-    @media (min-width:1400px){
-      padding: 70px; 
     }
   }
 
@@ -941,15 +948,13 @@ nav{
 .hero-header{
   padding-top: 60px;
   padding-bottom: 40px;
-  @media (min-width:992px){
-    padding-top: 120px;
-    padding-bottom: 60px;
-    padding-left: 80px;
-    padding-right: 80px;
+  @media (min-width:768px){
+    padding-top: 8vw;
+    padding-bottom: 4vw;
 
   }
 }
-//about us and blog pages (style 4)
+
 
 
 
@@ -967,26 +972,21 @@ nav{
       height: 100%;
     }
   }
+
   .bg-img.bg-height {
     width: calc(100% - 40px);
     margin: 0 auto;
-    max-width: 1420px;
   }
 
-  @media (min-width:768px){
-    .bg-img.bg-height {
-      width: calc(100% - 80px);
-    }
-  }
+  @media (min-width:900px){
+    padding-left: 5vw;
+    padding-right:5vw;
 
-
-  @media (min-width:992px){
-    padding-left: 80px;
-    padding-right:80px;
     .bg-img.bg-height {
       width: 100%;
     }
   }
+
 }
 
 
@@ -1007,12 +1007,12 @@ nav{
   .bkgd-800 .pod-wrapper{
     @include bg-img(url("/uploads/siteImages/bg-home-btm.svg"), 100% 100%, contain);
   }
+
   .divider-detail{
 
-    margin-bottom: 40px;
+    margin-bottom: 4vw;
     @media (min-width:992px){
-      margin-top: 87px;
-      margin-bottom: 60px;
+      margin-top: 5vw;
     }
   }
 
@@ -1025,8 +1025,8 @@ nav{
 
 
   .style-2{
-    padding-top:60px;
-    padding-bottom:40px;
+    padding-top:6vw;
+    padding-bottom:6vw;
     h3{
       margin-bottom: 40px;
     }
@@ -1041,11 +1041,6 @@ nav{
       .intro-text{
         padding-left: 40px;
       }
-  
-    }
-    @media (min-width:992px){
-      padding-top:140px; 
-      padding-bottom:100px;
     }
     @media (min-width:1200px){
       .intro-text{
@@ -1059,7 +1054,7 @@ nav{
 
 .service-inner{
   .wrapper-svg{
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
 
   .single-svg{
     @media (min-width:992px){
@@ -1067,12 +1062,6 @@ nav{
     }
   }
 
-    @media (min-width:768px){
-      margin-bottom: 40px;
-    }
-    @media (min-width:992px){
-      margin-bottom: 0px;
-    }
   }
 
 
@@ -1091,38 +1080,36 @@ nav{
     }
   }
 
-
-
+  
 }
 
 .style-5.sec-2{
-
- .alternate:nth-of-type(2n){
-    .d-lg-flex{
-      flex-direction: row-reverse
-    }
-    .half{
-      .max-800{
-        margin-right: auto;
-        // margin-left: 0;
+  .alternate:nth-of-type(2n){
+      .d-lg-flex{
+        flex-direction: row-reverse
       }
-    }
-    @media (min-width:992px){
       .half{
         .max-800{
-          margin-left: 0;
+          margin-right: auto;
+          // margin-left: 0;
+        }
+      }
+      @media (min-width:992px){
+        .half{
+          .max-800{
+            margin-left: 0;
+          }
         }
       }
     }
-  }
-  .bg-img{
-    min-height: 300px;
-    background-position: 50% 0%;
-  }
-  .half{
-    margin: 0;
+    .bg-img{
+      min-height: 300px;
+      background-position: 50% 0%;
+    }
+    .half{
+      margin: 0;
 
-  }
+    }
 }
 //section used on residential and commerical INTERNAL apges for alternating positions
 
@@ -1131,6 +1118,7 @@ nav{
 .about{
 
   .small-image-wrapper{
+    padding-bottom: 60px;
     .bg-img{
       min-height:300px;
       max-height: 300px;
@@ -1141,9 +1129,8 @@ nav{
       color:$grey700;
       font-size: 24px;
     }
-    padding-bottom: 60px;
-
     @media (min-width:768px){
+      padding-bottom: 7vw;
       .intro-text{
         font-size: 30px;
       }
@@ -1155,7 +1142,6 @@ nav{
       .intro-text{
         font-size: 36px;
       }
-      padding-bottom: 120px;
     }
   }
 
@@ -1170,8 +1156,8 @@ nav{
       max-width: 620px;
     }
 
-    @media (min-width:992px){
-      margin-bottom: 100px;
+    @media (min-width:768px){
+      margin-bottom: 6vw;
 
 
     }
@@ -1495,7 +1481,7 @@ nav{
   @include bg-img(url("/uploads/siteImages/bg-btm-left.svg"), 0% 120%, contain);
   
   .pod-wrapper{
-    max-width:1420px;
+    max-width:1440px;
     margin: 0 auto;
     padding:0;
   }
@@ -1520,10 +1506,9 @@ nav{
 
   }
   .pods.pod-1 .pod{
-    margin-top:40px;
     border:none;
     background-color: $red;
-    flex-direction: row;
+    
     width:100% !important;
     overflow:hidden;
     &:hover{
@@ -1534,15 +1519,39 @@ nav{
     }
     img{
       width:100%;
-      max-width: 460px;
-    }
-    > div:first-of-type{
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
+      margin-top: 20px;
     }
 
+
     > div:last-of-type{
+        .bg-detail{
+          width: 100%;
+          max-width: 300px;
+          margin-top: -41px;
+          margin-bottom: 40px;
+          display:none;
+          &.bottom{
+            margin-bottom: -41px;
+            margin-top: 40px;
+          }
+        }
+    }
+
+    @media (min-width:992px){
+      h3{
+        max-width: 80%;
+      }
+      flex-direction: row;
+      img{
+        max-width: 460px;
+        margin-top: 0;
+      }
+      > div:first-of-type{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+      }
+      > div:last-of-type{
         max-width: 50%;
         display: flex;
         flex-direction: column;
@@ -1550,25 +1559,15 @@ nav{
         position: relative;
         align-items: center;
         .bg-detail{
+          display:block;
           width: 100%;
           max-width: 300px;
-          margin-top: -41px;
-          margin-bottom: 40px;
-          @media(min-width:992px){
-            margin-top: -70px;
-          }
-          &.bottom{
-            margin-bottom: -41px;
-            margin-top: 40px;
-            @media(min-width:992px){
-              margin-bottom: -70px;
-            }
-          }
+          // margin-bottom: 8vw;
+ 
+
+
         }
     }
-
-    @media (min-width:992px){
-      margin-top:40px
     }
   }
 
@@ -1590,10 +1589,6 @@ nav{
       @media(min-width:992px){
       font-size: 100px
       }
-    }
-    @media (min-width:992px){
-      padding-top: 120px;
-      padding-bottom:60px
     }
   }
 
@@ -1643,11 +1638,6 @@ nav{
         .details{
           display: flex;
           justify-content: space-between;
-          ul li{
-            a,p{
-              // font-size:20px
-            }
-          }
           ul{
             &.contact-us{
               li{
@@ -1717,6 +1707,14 @@ nav{
           padding-right:25%;
         }
       }
+    }
+  }
+
+  @media (min-width:768px){
+    padding-bottom:3.8vw;
+    .footer-header{
+      padding-top: 7vw;
+      padding-bottom:3.8vw;
     }
   }
 }
