--- a/templates/blog/_entry.twig
+++ b/templates/blog/_entry.twig
@@ -59,7 +59,8 @@
             <div class="d-lg-flex small-image">
                <div class="left-size">
                {% if featureImage %}
-                   <img src="{{ featureImage.getUrl('blogHero') }}" alt="Customer profile image">
+                   {# <img src="{{ featureImage.getUrl() }}" alt="Customer profile image"> #}
+                   <div class="bg-img" style="background-image: url({{ featureImage.getUrl() }})"></div>
                {% endif %}
                </div>
 
