--- a/templates/commercial/index.twig
+++ b/templates/commercial/index.twig
@@ -1,7 +1,7 @@
 
 {% extends "_layout.twig" %}
 
-{% set posts = craft.entries().section('commercial').all() %}
+{% set posts = craft.entries().section('commercial').orderBy('postDate asc').all() %}
 {% block content %}
 
 
