--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -6,9 +6,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
   {% do view.registerCssFile(url('scss/assets/scss/style.scss')) %}
-  {% do view.registerJsFile(url('js/assets/js/script.js')) %}
   {% do craft.app.view.registerCssFile('@web/styles.css') %}
   <link rel="stylesheet" href="https://use.typekit.net/cic1emf.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
 </head>
 <header>
 
@@ -19,9 +19,16 @@
   {% block content %}
   {% endblock %}
   {% include "_partials/footer.twig" %}
+
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js'></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script  src="/nav-bar.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+  <script  src="/js/nav-bar.js"></script>
+  <script  src="/js/slider.js"></script>
+   <script  src="/js/script.js"></script>
+
 </body>
 </html>
