--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -207,13 +207,15 @@ p.pre-header{
   .bg-grad-1::before{
     content:'';
     position: absolute;
-    width: 100%;
+    width:calc(100% - 40px);
     height: 100%;
-    left: 5vw;
+    left: 20px;
     top: 0;
     @include gradient(135deg, $bg-grad-1);
+
     @media (min-width:992px){
       width:calc(100% - 10vw);
+      left: 5vw;
     }
   }
 
@@ -978,7 +980,7 @@ nav{
     margin: 0 auto;
   }
 
-  @media (min-width:900px){
+  @media (min-width:992px){
     padding-left: 5vw;
     padding-right:5vw;
 
@@ -996,6 +998,50 @@ nav{
 //************* PAGE SPECIFIC STYLES *********************
 
 .homepage{
+  .hero{
+    @include bg-img(url("/uploads/images/placeholder-2.jpg"), 50% 50%, cover);
+    h1{
+      display: flex;
+      flex-direction: column;
+      // max-width: 1064px;
+      margin: 0 auto;
+      .x{
+        padding-top: 64px;
+        padding-bottom: 64px;
+        display: flex;
+        color:$white;
+        background-color: rgba(0,0,0,70%);
+        
+        span{
+          width: 100%;
+          text-align: right;
+          max-width: 1064px;
+          margin: 0 auto;
+          position: relative;
+          .sm{
+            font-size:36px; 
+            max-width: 300px;
+            font-size: 36px;
+            max-width: 300px;
+            position: absolute;
+            line-height: 1em;
+            left: 0;
+            font-weight: 400;
+          }
+        }
+
+        &:last-of-type,
+        &:first-of-type{
+          color:$black;
+          background-color: rgba(243,244,246,90%);
+          span{
+            text-align: left;
+          }
+        }
+
+      }
+    }
+  }
   .style-5.sec-1{
     padding: 40px 20px 0;
     @media(min-width:768px){
@@ -1010,7 +1056,7 @@ nav{
     @include bg-img(url("/uploads/siteImages/bg-home-btm.svg"), 100% 100%, contain);
   }
   .style-5 .intro-text{
-    margin-top: 0;
+    margin-top: 30px;
   }
 
   .bg-img-one.bg-red{
@@ -1737,4 +1783,24 @@ nav{
   }
 }
 
+.testimonial-wrapper .right-size{
+position: relative;
 
+// .swiper {
+//   width: 100%;
+//   height: 100%;
+//   background: yellow;
+//   position: relative;
+
+// }
+// .swiper-wrapper{
+//   background-color: black;
+//   position: relative;
+
+// }
+// .swiper-slide {
+//   background: red;
+//   position: relative;
+
+// }
+}
