--- a/templates/home/index.twig
+++ b/templates/home/index.twig
@@ -17,15 +17,10 @@
 
 
 {# testimonials #}
-{% set myEntryQuery = craft.entries()
-  .section('testimonials')
-  .limit(10) %}
+{% set myEntryQuery = craft.entries().section('testimonials').all() %}
 
 {# Fetch testimonials entries #}
-{% set entries = myEntryQuery.all() %}
-
-
-
+{% set entries = myEntryQuery %}
 
 
 {% block content %}
@@ -38,8 +33,6 @@
     <span class="x"><span>Electric</span></span>
   </h1>
 </div>
-
-
 
 <div class="style-5 sec-1" >
   <div class="">
@@ -209,62 +202,75 @@
 </section>
 
 
+
 <div class="container-fluid style-4 testimonial" >
   <div class="wrapper">
-    <div class="d-flex flex-column">
-      <div class="">
-        <p class="pre-header">Lighting and Wiring</p>
-        <h2>Residential electrical work</h2>
-      </div> 
-    </div>
-  
-    <div class="d-lg-flex testimonial-wrapper">
-      <div class="left-size">
-        <div class="img-wrapper">
-          <div><img src="/uploads/siteImages/quote.svg" alt="Decorative icon quote marks"></div>
+
+      <div class="d-flex flex-column">
+        <div class="">
+          <p class="pre-header">Lighting and Wiring</p>
+          <h2>Residential electrical work</h2>
+        </div> 
+      </div>
+
+      <div class="testimonial-wrapper">
+        <div class="quote-mark left-size">
+
+          <div class="img-wrapper">
+            <div><img src="/uploads/siteImages/quote.svg" alt="Decorative icon quote marks"></div>
+          </div>
+
+        </div>
+        <div class="swiper">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            {% for entry in entries %}
+            <div class="swiper-slide">
+
+                      <div class="testimonial-text">
+                      {% if entry.quote %}
+                         {{ entry.quote }}
+                      {% endif %}
+                      </div>
+                      <div class="test-author">
+                      {% set image = entry.profilePic.one() %}
+                        {% if image %}
+                        <div class="img-auth">
+                          <img src="{{ entry.profilePic[0].getUrl('customerProfilePic') }}" alt="Customer profile image">
+                        </div>
+                        {% endif %}
+
+                        <div class="text-auth">
+                          {% if entry.title %}
+                            <p><span> {{entry.title }}</span></p>
+                          {% endif %}
+                          {% if entry.customerLocation %}
+                            <p>{{entry.customerLocation}}</p>
+                          {% endif %}
+                        </div>
+                      </div>
+                
+
+            </div>
+            {% endfor %}
+          </div>
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+
+          <!-- If we need navigation buttons -->
+          {# <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div> #}
+
+          <!-- If we need scrollbar -->
+          <div class="swiper-scrollbar"></div>
         </div>
       </div>
 
-      <div class="right-size">
-          <!-- Slider main container -->
-          <div class="swiper">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              {% for entry in entries %}
-              <div class="swiper-slide">
 
-                        <div class="testimonial-text">
-                        {{ entry.quote }}
-                        </div>
-                        <div class="test-author">
-                          <div class="img-auth">
-                            <img src="{{ entry.profilePic[0].getUrl('customerProfilePic') }}" alt="Customer profile image">
-                          </div>
-                          <div class="text-auth">
-                            <p><span> {{entry.title }}</span></p>
-                            <p>{{entry.customerLocation}}</p>
-                          </div>
-                        </div>
-                  
-
-              </div>
-              {% endfor %}
-            </div>
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-
-            <!-- If we need scrollbar -->
-            <div class="swiper-scrollbar"></div>
-          </div>
-      </div>
-    </div>
   </div>
-</div> 
+</div>
+
 
   <div class="style-5 contact">
     <div class="">
