--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -602,6 +602,8 @@ nav{
   }
 }
 
+
+
 //homepage
 // style 4 testimonial styles - homepage
 .testimonial{
@@ -620,7 +622,7 @@ nav{
 
   .testimonial-wrapper{
     position: relative;
-
+    display: flex;
     &::before{
       content:'';
       position: absolute;
@@ -677,6 +679,19 @@ nav{
 
   }
 }
+//slider
+.swiper-slide{
+  padding: 0 40px;
+  padding-bottom: 40px;
+  display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.swiper-pagination-bullet-active{
+  background-color: $red;
+}
+
+
 //testimonial and blog
 .media-author,
 .test-author{
@@ -687,7 +702,6 @@ nav{
   }
   .img-auth{
     margin-right:24px;
-    background-color: red;
     width: 50px;
     height: 50px;
     border-radius: 100%;
@@ -1783,24 +1797,4 @@ nav{
   }
 }
 
-.testimonial-wrapper .right-size{
-position: relative;
 
-// .swiper {
-//   width: 100%;
-//   height: 100%;
-//   background: yellow;
-//   position: relative;
-
-// }
-// .swiper-wrapper{
-//   background-color: black;
-//   position: relative;
-
-// }
-// .swiper-slide {
-//   background: red;
-//   position: relative;
-
-// }
-}
