--- a/templates/home/index.twig
+++ b/templates/home/index.twig
@@ -26,13 +26,13 @@
 {% block content %}
 <div class="homepage">
 
-<div class="hero">
+{# <div class="hero">
   <h1>
    <span class="x"><span>Your Trusted Partner</span></span>
     <span class="x"><span><span class="sm">Powering Wellington and the Kapiti Coast</span>For Everything</span></span>
     <span class="x"><span>Electric</span></span>
   </h1>
-</div>
+</div> #}
 
 <div class="style-5 sec-1" >
   <div class="">
