--- a/web/assets/scss/_variables.scss
+++ b/web/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 $header-font:  'helvetica_neue_lt_proregular', sans-serif;
 $body-font: 'helvetica_neue_lt_pro55_roman', sans-serif;
+$body-light:'helvetica_neue_lt_pro_lite', sans-serif;
 $pre-header:"sweet-sans-pro", sans-serif;
 $button:"sweet-sans-pro", sans-serif;
 
