--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -1012,50 +1012,50 @@ nav{
 //************* PAGE SPECIFIC STYLES *********************
 
 .homepage{
-  .hero{
-    @include bg-img(url("/uploads/images/placeholder-2.jpg"), 50% 50%, cover);
-    h1{
-      display: flex;
-      flex-direction: column;
-      // max-width: 1064px;
-      margin: 0 auto;
-      .x{
-        padding-top: 64px;
-        padding-bottom: 64px;
-        display: flex;
-        color:$white;
-        background-color: rgba(0,0,0,70%);
+  // .hero{
+  //   @include bg-img(url("/uploads/images/placeholder-2.jpg"), 50% 50%, cover);
+  //   h1{
+  //     display: flex;
+  //     flex-direction: column;
+  //     // max-width: 1064px;
+  //     margin: 0 auto;
+  //     .x{
+  //       padding-top: 64px;
+  //       padding-bottom: 64px;
+  //       display: flex;
+  //       color:$white;
+  //       background-color: rgba(0,0,0,70%);
         
-        span{
-          width: 100%;
-          text-align: right;
-          max-width: 1064px;
-          margin: 0 auto;
-          position: relative;
-          .sm{
-            font-size:36px; 
-            max-width: 300px;
-            font-size: 36px;
-            max-width: 300px;
-            position: absolute;
-            line-height: 1em;
-            left: 0;
-            font-weight: 400;
-          }
-        }
+  //       span{
+  //         width: 100%;
+  //         text-align: right;
+  //         max-width: 1064px;
+  //         margin: 0 auto;
+  //         position: relative;
+  //         .sm{
+  //           font-size:36px; 
+  //           max-width: 300px;
+  //           font-size: 36px;
+  //           max-width: 300px;
+  //           position: absolute;
+  //           line-height: 1em;
+  //           left: 0;
+  //           font-weight: 400;
+  //         }
+  //       }
 
-        &:last-of-type,
-        &:first-of-type{
-          color:$black;
-          background-color: rgba(243,244,246,90%);
-          span{
-            text-align: left;
-          }
-        }
+  //       &:last-of-type,
+  //       &:first-of-type{
+  //         color:$black;
+  //         background-color: rgba(243,244,246,90%);
+  //         span{
+  //           text-align: left;
+  //         }
+  //       }
 
-      }
-    }
-  }
+  //     }
+  //   }
+  // }
   .style-5.sec-1{
     padding: 40px 20px 0;
     @media(min-width:768px){
