--- a/templates/home/index.twig
+++ b/templates/home/index.twig
@@ -26,13 +26,31 @@
 {% block content %}
 <div class="homepage">
 
-{# <div class="hero">
+<div class="hero">
   <h1>
-   <span class="x"><span>Your Trusted Partner</span></span>
-    <span class="x"><span><span class="sm">Powering Wellington and the Kapiti Coast</span>For Everything</span></span>
-    <span class="x"><span>Electric</span></span>
+    <span class="x">
+      <span>Your Trusted Partner</span>
+    </span>
+
+    <span class="x">
+     
+      <span> <span class="note">Powering Wellington and the Kapiti Coast</span>For Everything</span>
+    </span>
+
+    <span class="x">
+      <span>Electric            <span class="note">Your go-to team for residential and light commercial electrical work from Wellington to Ōtaki and everywhere in between.</span></span>
+
+    </span>
   </h1>
-</div> #}
+
+  <div>
+    <p>Powering Wellington and the Kapiti Coast
+    </p>
+    <p>Your go-to team for residential and light commercial electrical work from Wellington to Ōtaki and everywhere in between.</p>
+  </div>
+
+
+</div>
 
 <div class="style-5 sec-1" >
   <div class="">
