--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -1012,50 +1012,127 @@ nav{
 //************* PAGE SPECIFIC STYLES *********************
 
 .homepage{
-  // .hero{
-  //   @include bg-img(url("/uploads/images/placeholder-2.jpg"), 50% 50%, cover);
-  //   h1{
-  //     display: flex;
-  //     flex-direction: column;
-  //     // max-width: 1064px;
-  //     margin: 0 auto;
-  //     .x{
-  //       padding-top: 64px;
-  //       padding-bottom: 64px;
-  //       display: flex;
-  //       color:$white;
-  //       background-color: rgba(0,0,0,70%);
-        
-  //       span{
-  //         width: 100%;
-  //         text-align: right;
-  //         max-width: 1064px;
-  //         margin: 0 auto;
-  //         position: relative;
-  //         .sm{
-  //           font-size:36px; 
-  //           max-width: 300px;
-  //           font-size: 36px;
-  //           max-width: 300px;
-  //           position: absolute;
-  //           line-height: 1em;
-  //           left: 0;
-  //           font-weight: 400;
-  //         }
-  //       }
+  .hero{
+    @include bg-img(url("/uploads/images/hero-home.jpg"), 50% 50%, cover);
 
-  //       &:last-of-type,
-  //       &:first-of-type{
-  //         color:$black;
-  //         background-color: rgba(243,244,246,90%);
-  //         span{
-  //           text-align: left;
-  //         }
-  //       }
+    h1{
+      .x{
+        font-size: 48px;
+        line-height: 1em;
+        display: flex;
+        align-items: center;
+        color:$white;
+        padding-left: 20px;
+        padding-right: 20px;
 
-  //     }
-  //   }
-  // }
+
+        &:first-of-type{
+          padding-top: 45px;
+          padding-bottom: 45px;
+          color:$black;
+          @include bg-img(url("/uploads/images/hero-1a.jpg"), 50% 50%, cover);
+          span{
+            text-align: left;
+          }
+        }
+
+        &:nth-of-type(2){
+          padding-top: 45px;
+        }
+
+        &:last-of-type{
+          padding-bottom: 45px ;
+          
+        }
+        .note{
+          display: none;
+          font-family: $body-light;
+          font-weight: 300;
+          font-size:35px;
+          line-height: 1em;
+        }
+
+      }
+
+
+      @media (min-width:768px){
+        .x{
+          padding-left: 5vw;
+          padding-right: 5vw;
+          font-size: 8vw;
+        }
+      }
+
+      @media (min-width:992px){
+        display: flex;
+        flex-direction: column;
+        .x{
+          display: block;
+          span{
+            display: flex;
+            flex-direction: row;
+            align-items:  center;
+            max-width: 1080px;
+            margin: 0 auto;
+          }
+          .note{
+            display: block;
+            width: 37%;
+            padding-right: 60px;
+            margin: 0;
+          }
+
+          &:first-of-type,
+          &:nth-of-type(2),
+          &:last-of-type{
+            padding-top: 60px;
+            padding-bottom: 60px;
+          }
+  
+          &:last-of-type{
+            color:$black;
+            @include bg-img(url("/uploads/images/hero-3.jpg"), 50% 50%, cover);
+            .note{
+              padding-left: 100px;
+              width: 100%;
+              font-size: 20px;
+            }
+          }
+        }
+      }
+
+      @media(min-width:1260px){
+        .x{
+          padding-left: 0;
+          padding-right: 0;
+          font-size:100px;
+        }
+      }
+    }
+
+
+
+    div{
+      padding: 40px 20px;
+      @include bg-img(url("/uploads/images/hero-3.jpg"), 50% 50%, cover);
+      p:first-of-type{
+        font-size: 35px;
+        margin-bottom: 20px;
+        line-height: 1em;
+      }
+      p:last-of-type{
+        font-size: 20px;
+      }
+      @media (min-width:768px){
+        padding: 40px;
+      }
+      @media (min-width:992px){
+        display: none;
+      }
+    }
+  }
+
+
   .style-5.sec-1{
     padding: 40px 20px 0;
     @media(min-width:768px){
