--- a/templates/_partials/navigation.twig
+++ b/templates/_partials/navigation.twig
@@ -13,16 +13,22 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto ml-auto">
     
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown megamenu-li">
         <div class="d-flex">
           <a class="nav-link" href="/residential">Residential</a>
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
         </div>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <div class="dropdown-menu megamenu" aria-labelledby="navbarDropdown">
           <ul>
             {% for post in residential  %}
             <li>
-              <a href="{{ post.url }}">{{ post.title }}</a>
+              <a href="{{ post.url }}"> 
+              <span>
+                <img src="{{ post.pageIcon[0].getUrl() }}" alt="{{post.title}} decorative icon">
+                {{ post.title }}
+                </span>
+                 {% include '_partials/svg/btn-icon-arrow.svg' %}
+              </a>
             </li>
             {% endfor %}
           </ul>
