--- a/templates/blog/_entry.twig
+++ b/templates/blog/_entry.twig
@@ -1,5 +1,5 @@
 {% extends "_layout.twig" %}
-
+{% set docTitle = 'Blog | Get Amped Electrical ' %}
 {# Images on this page weight #}
 {% set imgQuality = {
   quality: 60,
