--- a/templates/commercial/_entry.twig
+++ b/templates/commercial/_entry.twig
@@ -1,5 +1,5 @@
 {% extends "_layout.twig" %}
-
+{% set docTitle = 'Commercial | Get Amped Electrical ' %}
 
 {% block content %}
 <div class="service-inner">
