--- a/templates/home/index.twig
+++ b/templates/home/index.twig
@@ -1,5 +1,7 @@
 {% extends "_layout.twig" %}
 
+{% set docTitle = 'Home | Get Amped Electrical ' %}
+
 {% block head %}
   {{ parent() }}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
