--- a/templates/about/_entry.twig
+++ b/templates/about/_entry.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-
+{% set docTitle = 'About | Get Amped Electrical ' %}
 {# Images on this page weight #}
 {% set imgQuality = {
   quality: 60,
