--- a/templates/careers/index.twig
+++ b/templates/careers/index.twig
@@ -1,5 +1,5 @@
 {% extends "_layout.twig" %}
-
+{% set docTitle = 'Careers| Get Amped Electrical ' %}
 {% set posts = craft.entries().section('careers').all() %}
 
 
