--- a/templates/residential/_entry.twig
+++ b/templates/residential/_entry.twig
@@ -1,5 +1,6 @@
 {% extends "_layout.twig" %}
 
+{% set docTitle = 'Residential | Get Amped Electrical ' %}
 
 {% block content %}
 <div class="service-inner">
