--- a/templates/residential/index.twig
+++ b/templates/residential/index.twig
@@ -1,6 +1,6 @@
 
 {% extends "_layout.twig" %}
-
+{% set docTitle = 'Residential | Get Amped Electrical ' %}
 {# Images on this page weight #}
 
 {% set posts = craft.entries().section('residential').orderBy('postDate asc').all() %}
