--- a/web/assets/styles/main.scss
+++ b/web/assets/styles/main.scss
@@ -40,6 +40,7 @@ body {
   max-width: 2000px;
   min-width: 320px;
   overflow-x: hidden; 
+  padding-top: 70px;
 
 }
 
@@ -326,10 +327,18 @@ div[class^="col"]{
 
 
 //*************navigation*********************
+.navbar{
+  position: fixed;
+  width: 100%;
+  background-color:$white;
+  top: 0;
+  left: 0;
+}
 nav{
   width: 100%;
   padding:10px 20px;
   margin: 0 auto;
+  z-index: 10;
   .btn a .btn-arrow{
     padding: 13px;
   }
@@ -354,6 +363,10 @@ nav{
 
   }
 
+  .navbar-toggler {
+    outline-color: transparent;
+    border-width: 0;
+  }
   &.navbar .nav-item:not(:last-child) {
     margin-right: 10px;
     @media (min-width:1200px){
@@ -411,7 +424,7 @@ nav{
     padding-left: 0;
     border-width: 0;
     li{
-      width: 25%;
+      width: 100%;
       background-color:#f9fafb;
       display: flex;
 
@@ -419,36 +432,107 @@ nav{
       a{
         border-left: 1px solid #E5E7EB;
         border-bottom:1px solid #E5E7EB;
+        border-right:1px solid #E5E7EB;
         width: 100%;
         padding: 20px;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        span{
+          display: flex;
+          align-items: center;
+          font-size: 16px;
+        }
         img{
           margin-right:10px;
           width: 40px;
+          height: 40px;
         }
         svg{
           path{
             fill:#E5E7EB;
           }
         }
+        // @media (min-width:992px){
+        //   span{
+        //     font-size: 18px; 
+        //   }
+        // }
+        // @media (min-width:1200px){
+        //   span{
+        //     font-size: 25px; 
+        //   }
+        // }
       }
-      &:nth-of-type(5) a,
-      &:nth-of-type(6) a,
-      &:nth-of-type(7) a,
-      &:nth-of-type(8) a{
-        border-bottom-width: 0;
+
+      &:nth-of-type(2),
+      &:nth-of-type(1) a{
+        border-top:1px solid #E5E7EB;
       }
 
 
+      @media (min-width:600px){
+        width: 50%;
+      }
+
+      @media (min-width:992px){
+        width: 25%;
+        &:nth-of-type(5) a,
+        &:nth-of-type(6) a,
+        &:nth-of-type(7) a,
+        &:nth-of-type(8) a{
+          border-bottom-width: 0;
+          border-right-width: 0;
+        }
+      }
     }
   }
 }
 
 
 
+.error-page{
+  .wrapper-error-page{
+    justify-content: space-evenly;
+    flex-direction:column;
+    display:flex;
+    min-height:calc(100vh - 70px);
+    .error-wrapper{
+      flex-direction:column;
+      display:flex;
+      align-items: center;
+      text-align: center;
+      padding: 5vw;
+    }
+    h1{
+      font-size: 40vw;
+      @media(min-width:1200px){
+        font-size: 20vw;
+      }
+    }
+    p:not(.btn p){
+      font-size:35px;
+      line-height: 1.3em;
+      margin-top: 30px;
+    }
+    .image-wrapper{
+      position:relative;
+      height: 20px;
+      width: 300px;
+      img{
+        position: absolute;
+        left: 25%;
+        bottom: 0;
+        width: 50%;
+  
+      }
+    }
 
+  }
+  .footer-header{
+    display:none;
+  }
+}
 
 
 
