--- a/templates/commercial/index.twig
+++ b/templates/commercial/index.twig
@@ -1,6 +1,6 @@
 
 {% extends "_layout.twig" %}
-
+{% set docTitle = 'Commercial | Get Amped Electrical ' %}
 {% set posts = craft.entries().section('commercial').orderBy('postDate asc').all() %}
 {% block content %}
 
