--- a/web/assets/styles/main.css
+++ b/web/assets/styles/main.css
@@ -1069,6 +1069,7 @@ nav.navbar-light .navbar-nav .nav-link:hover {
   }
   .wrapper-svg .bg-img.bg-height {
     width: 100%;
+    max-width: 1600px;
   }
 }
 
