commit to change branch

--- a/templates/home/index.twig
+++ b/templates/home/index.twig
@@ -304,7 +304,7 @@
         </div>
 
         <div class="half right bg-grey d-flex justify-content-between flex-column">
-          <div class="bg-img" style="background-image: url('{{ asset2.getUrl(imgQuality) }}">
+          <div class="bg-img" style="background-image: url('{{ asset1.getUrl(imgQuality) }}"></div>
           </div>
           <div class="form-wrapper">
             <div>
