add site url to footer

--- a/templates/_partials/footer.twig
+++ b/templates/_partials/footer.twig
@@ -17,7 +17,9 @@
         <div class="wrapper">
             <div class="footer-wrapper">
                 <div class="logo">
-                    <img src="{{ contactDetails.companyLogo[0].getUrl() }}" alt="{{contactDetails.imageAltText}}">
+                    <a href="{{ siteUrl }}">
+                        <img src="{{ contactDetails.companyLogo[0].getUrl() }}" alt="{{contactDetails.imageAltText}}">
+                    </a>
                 </div>
 
                 <div class="details">
