--- a/web/assets/styles/main.css
+++ b/web/assets/styles/main.css
@@ -1820,4 +1820,8 @@ nav.navbar-light .navbar-nav .nav-link:hover {
   }
 }
 
+.thank-you {
+  text-align: center;
+}
+
 /*# sourceMappingURL=main.css.map */
